client/src/App.css
/*.App-logo {
  animation: App-logo-spin infinite 20s linear;
  /*height: 80px;*/
/*}

@keyframes App-logo-spin {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}*/
/*font-family: 'Montserrat', sans-serif;
font-family: 'Anton', sans-serif;*/
#mainPic {
  border:3px solid black;
  margin-top: 2%;
  max-height:185px;
}
#uTileDevelopersProgram{
  margin-left: 8%;
}
#closeBar {
  position: fixed;
  top: 0;
  right: 0;
  font-size: 24px;
}
.arrowMargin {
  font-size: 80px;
}
.textAlignPortTwo {
  margin-left: 24%;
}
#nav {
  margin:0;
  padding:0;
  background-image: url('./images/topBar_edited.jpg');
  color:white;
  background-size: cover;
  width:100%;
  height: 200px;
  border-bottom: 3px solid black;
  position: relative;
  top:-140px;
  white-space: nowrap;
  overflow: hidden;
}
.mainText {
  font-style: italic;
}
.textMarginTwo {
  margin-left:50px;
  margin-right:50px;
}
.textMargin {
  margin:50px;
}
.fixHeaders {
  margin-left: 50px;
}
.mainTextTwo {
  font-style: italic;
  font-weight: bold;
  line-height: 35px;
}
#background li {
  font-size: 18px;
}
ul {
  list-style-type: disc;
  margin-left: 2%;
}
.applicationMove {
  margin-top: 328px;
}
#recentProj {
  text-align: center;
  font-size: 55px;
}
a {
  font-size: 18px;
}
/* unvisited link */
a:link {
    color: black;
}

/* visited link */
a:visited {
    color: black;
}

/* mouse over link */
a:hover {
    color: white;
}

/* selected link */
a:active {
    color: blue;
}
#portImages a {
  font-size: 22px;
}
.projTitle {
  font-size: 22px;
  white-space: nowrap;
  /*margin-left: 4%;*/
}
#TheCentennialCharge {
  margin-left: 11%;
}
#BamazonApp {
margin-left: 24%;
}
#FlashCardFun {
margin-left: 22%;
}
#StarWarsBattle {
margin-left: 19%;
}
#RockPaperScissors-Multiplayer {
margin-left: -4%;
}
#LIRI-NodeApplication {
  margin-left: 12%;
}
#portImages {
  color:black;
  background-image: url('./images/middlebar2.jpg');
  background-size: cover;
}
.mainTitleText {
  font-weight: bold;
  font-size: 20px;
  /*margin-right: 45px;*/
  /*white-space: nowrap;*/
}
.supportingText {
  font-size: 18px;
  font-style: italic;
  /*margin-right: 45px;*/
}

.mainContentHeader {
  font-size: 20px;
  font-weight: bold;
}

.boxBackgroundTwo {
  background-color: white;
  border-radius: 5px;
  padding: 10px;
  margin-top: 2%;
  /*opacity: .9;*/
  min-height: 150px;
  margin-bottom: 1%;
}
.centerMeTimbers {
  margin-bottom: 2%;
}

.borderBox {
  margin-left: 2%;
}
.portImageGroupModal {
  border: 1px solid black;
  margin-top: 23px;
}
.portImageGroup {
  border: 1px solid black;
  max-height: 200px;
}
.textAlignPort {
  margin-left: 5%;
}
.contactText {
  font-size: 20px;
  font-weight: bold;
}
#education {
  margin-top: 10px;

}
.mainText {
  font-style: italic;

}
.skillsTop {
  margin-top: 30px;
}
.center {
  text-align: center;
}
.boxBackground {
  color:white;
  padding: 10px;
  /*margin-top: 2%;*/
  /*opacity: .9;*/
  min-height: 250px;
}
#rightSide {
  /*position: fixed;
  z-index: 101;
  top: 301px;
  right:0;*/
}
.colorBox {
  width:100%;
  background-color: #005781;
  border-top: 3px solid black;
  border-bottom: 3px solid black;
}
#secondColorBar {
  color:white;
  width:100%;
  background-color: #860102;
  border-top: 3px solid black;
  border-bottom: 3px solid black;
}
#topMargin {
  margin-top: -80px;
  margin-bottom: 80px;
}
#contactBar {
  position: fixed;
  top: 214px;
  right:-30px;
}

#emailForm h2 {
  text-align: center;
}
#contactPort a {
  margin:0;
  padding:0;
}

.clear {
  float:clear;
}
#mainNameHeader {
  font-family: 'Anton', sans-serif;
  letter-spacing: 25px;
  font-size: 65px;
}
#emailFormat {
  font-family: 'Crimson Text', serif;
  font-size: 25px;
  letter-spacing: 8px;
  font-weight: bold;
  margin-top: 5%;
}
#fixNavBar {
  text-align: center;
}
.textAlign {
  padding:0 5px 5px 5px;
  font-size: 14px;
  font-weight: bold;
}
@media screen and (max-width: 1200px) {
.textMarginTwo {
  margin-left: 50px;
  margin-right: 50px;
}
}
@media screen and (max-width: 1024px) {
#navNameHolder {
  margin-left: -5%;
  margin-top: 5%;
}
}
@media screen and (max-width: 960px) and (min-width:737px) {
  #recentProj {
    text-align: center;
    font-size: 35px;
    margin-top:54%;
}
  #contactBar {
    position: fixed;
    top: 161px;
    right: -28px;
}
  .textMarginTwo {
    margin-left: 3px;
    margin-right: 78px;
  }
#contactBar {
  right: -30px;
}
.textMargin {
  margin-right: 30px;
  margin-left: 0;
}
#mainNameHeader {
  letter-spacing: 11px;
  font-size: 36px;
}
#navNameHolder {
  margin-left: -6%;
  margin-top: 9%;
}
#emailFormat {
  font-size: 17px;
}
#nav {
  height:198px;
}
}
@media screen and (max-width: 736px) {
  #contactBar {
    position: fixed;
    top: 124px;
    right: -28px;
}
  #mainNameHeader {
    letter-spacing: 7px;
    font-size: 33px;
  }
  #navNameHolder {
    margin-left: -2%;
    margin-top: 10%;
  }
  #emailFormat {
    font-size: 16px;
    letter-spacing: 2px;
  }
  #nav {
    height:193px;
  }
}
@media screen and (max-width: 700px) {
.textMarginTwo {
  margin-left: 3px;
  margin-right: 30px;
}
}
@media screen and (max-width: 568px) {
  #mainNameHeader {
    letter-spacing: 5px;
    font-size: 16px;
  }
  #navNameHolder {
    margin-left: -5%;
    margin-top: 6%;
  }
  #emailFormat {
    font-size: 10px;
    letter-spacing: 2px;
  }
  #nav {
    height:141px;
  }
}

